# keyrocky

./: Cargo.toml  README.md  build.rs  rust-toolchain.toml
src/: cli.rs  currencies.rs  error.rs  main.rs  order_book.rs  server.rs  websocket.rs
src/exchanges/: binance.rs  bitstamp.rs  mod.rs
test_data/: binance_order_book_update_message.json  bitstamp_order_book_update_message.json
