[package]
name = "keyrocky"
version = "0.1.0"
edition = "2021"

[dependencies]
bigdecimal = { version = "0.3.0", features = ["serde"] }
clap = { version = "3.2.22", features = ["wrap_help", "derive"] }
futures = "0.3.24"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0.35"
tokio = { version = "1.21.1", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"] }
tungstenite = "0.17.3"
